Setting up Android.mk.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "UnifiedNlpApi"]
 	path = UnifiedNlpApi
-	url = https://github.com/microg/android_external_UnifiedNlpApi.git
+	url = git@github.com:microg/android_external_UnifiedNlpApi.git
